fix: search select box does not display properly on safari

--- a/packages/website/src/components/Header/style.module.less
+++ b/packages/website/src/components/Header/style.module.less
@@ -98,6 +98,7 @@
       border: none;
       color: @gray-60;
       background-color: transparent;
+      appearance: none;
     }
 
     .searchDivider {
